--- a/model-quickfix/pom.xml
+++ b/model-quickfix/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>io.fixprotocol.orchestra</groupId>
+		<groupId>io.fixprotocol.orchestra.qf</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.6.9-SNAPSHOT</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>model-quickfix</artifactId>
 	<description>Message validation</description>
@@ -14,10 +14,10 @@
 		<dependency>
 			<groupId>io.fixprotocol.orchestra</groupId>
 			<artifactId>message-model</artifactId>
-			<version>${project.version}</version>
+			<version>${orchestra.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>io.fixprotocol.orchestra</groupId>
+			<groupId>io.fixprotocol.orchestra.qf</groupId>
 			<artifactId>repository-quickfix</artifactId>
 			<version>${project.version}</version>
 		</dependency>
