--- a/session-quickfix/pom.xml
+++ b/session-quickfix/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>io.fixprotocol.orchestra</groupId>
+		<groupId>io.fixprotocol.orchestra.qf</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.6.9-SNAPSHOT</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>session-quickfix</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>io.fixprotocol.orchestra</groupId>
 			<artifactId>interfaces</artifactId>
-			<version>${project.version}</version>
+			<version>${orchestra.version}</version>
 		</dependency>
 		<!-- not required for Java 8 -->
    		<dependency>
