--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
 	</distributionManagement>
 	<modules>
 		<module>session-quickfix</module>
-		<module>repository-quickfix</module>
 		<module>model-quickfix</module>
+        <module>repository-quickfix</module>
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -65,11 +65,12 @@
 		<junit.version>5.6.1</junit.version>
 		<log4j.version>2.17.0</log4j.version>
 		<orchestra.version>1.6.8</orchestra.version>
-		<quickfixj.version>2.2.0</quickfixj.version>
+		<quickfixj.version>2.2.1-SNAPSHOT</quickfixj.version>
 		<saxon.version>10.1</saxon.version>
 		<slf4j.version>1.7.22</slf4j.version>
 		<stringtemplate.version>4.3.1</stringtemplate.version>
 		<jackson.version>2.11.2</jackson.version>
+		<fix.orchestra.version>1.5.1</fix.orchestra.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -95,6 +96,11 @@
 				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
+            <dependency>
+                <groupId>io.fixprotocol.orchestrations</groupId>
+                <artifactId>fix-standard</artifactId>
+                <version>${fix.orchestra.version}</version>
+            </dependency>			
 		</dependencies>
 	</dependencyManagement>
 
@@ -131,22 +137,22 @@
 					</configuration>
 					<executions>
 						<!-- for Java 11+ -->
-						<execution>
-							<id>java11</id>
-							<goals>
-								<goal>compile</goal>
-							</goals>
-							<configuration>
-								<release>11</release>
-								<jdkToolchain>
-									<version>[11,)</version>
-								</jdkToolchain>
-								<compileSourceRoots>
-									<compileSourceRoot>${project.basedir}/src/main/java11</compileSourceRoot>
-								</compileSourceRoots>
-								<multiReleaseOutput>true</multiReleaseOutput>
-							</configuration>
-						</execution>
+<!-- 						<execution> -->
+<!-- 							<id>java11</id> -->
+<!-- 							<goals> -->
+<!-- 								<goal>compile</goal> -->
+<!-- 							</goals> -->
+<!-- 							<configuration> -->
+<!-- 								<release>11</release> -->
+<!-- 								<jdkToolchain> -->
+<!-- 									<version>[11,)</version> -->
+<!-- 								</jdkToolchain> -->
+<!-- 								<compileSourceRoots> -->
+<!-- 									<compileSourceRoot>${project.basedir}/src/main/java11</compileSourceRoot> -->
+<!-- 								</compileSourceRoots> -->
+<!-- 								<multiReleaseOutput>true</multiReleaseOutput> -->
+<!-- 							</configuration> -->
+<!-- 						</execution> -->
 					</executions>
 				</plugin>
 				<plugin>
