--- a/quickfixj-from-fix-orchestra-repository/quickfixj-from-fix-orchestra-generator/pom.xml
+++ b/quickfixj-from-fix-orchestra-repository/quickfixj-from-fix-orchestra-generator/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.quickfixj.orchestra</groupId>
 		<artifactId>quickfixj-from-fix-orchestra</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>quickfixj-from-fix-orchestra-generator</artifactId>
