--- a/quickfixj-from-fix-orchestra-repository/pom.xml
+++ b/quickfixj-from-fix-orchestra-repository/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.quickfixj.orchestra</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</parent>
 
 	<artifactId>quickfixj-from-fix-orchestra</artifactId>
