--- a/quickfixj-from-fix-orchestra-repository/quickfixj-from-fix-orchestra-dictionary-generator-maven-plugin/pom.xml
+++ b/quickfixj-from-fix-orchestra-repository/quickfixj-from-fix-orchestra-dictionary-generator-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.quickfixj.orchestra</groupId>
 		<artifactId>quickfixj-from-fix-orchestra</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</parent>
 
 	<artifactId>quickfixj-from-fix-orchestra-dictionary-generator-maven-plugin</artifactId>
